increased overall container width to fix wrapping nav on desktop

--- a/assets/css/smc-custom-bootstrap-b.css
+++ b/assets/css/smc-custom-bootstrap-b.css
@@ -223,9 +223,9 @@ footer {
 
 @media (min-width: 768px){
   #nav-parent-container {
-    width: 740px;
+    width: 790px;
 }
-}
+
 
 
 
